openshift/spring-cloud-gateway-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: f70e52650a9ccde99c697507ea57a51cc1f83813
    fabric8.io/git-branch: master
    fabric8.io/git-url: git@github.com:marzelwidmer/spring-cloud-gateway.git
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/spring-cloud-gateway
    fabric8.io/scm-tag: HEAD
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    component: fsl-backend
    app: spring-cloud-gateway
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: ch.keepcalm.demo
  name: spring-cloud-gateway
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-cloud-gateway
    provider: fabric8
    group: ch.keepcalm.demo
  type: NodePort
